--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -44,7 +44,7 @@
                 <MenuItem Header="Fiances" FontSize="12" Click="finances"/>
             </MenuItem>
             <MenuItem Header="Employés">
-                <MenuItem Header="Liste des employés" FontSize="12"/>
+                <MenuItem Header="Liste des employés" FontSize="12" Click="liste_employes"/>
                 <MenuItem Header="Salaires" FontSize="12"/>
             </MenuItem>
         </Menu>
